--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 		<section id='about-me'>
 			<div class='contain'>
-				<p>I am an ecological researcher located in southern Georgia.   My goals include improving environmental health and the sustainability of agricultural production systems. </p>
+				<p>I am an ecological researcher located in southern Georgia. My goals include improving environmental health and the sustainability of agricultural production systems. </p>
 				contact: <a href='mailto:csharris9@gmail.com'>csharris9@gmail.com</a>
 		</section>
 		<section id='research'>
@@ -37,7 +37,7 @@
 					</div>
 					<div class='td td--col'>
 						<img src='css/photos/salmonella_edit.jpg' alt='Bacteria on Chromagar' style='max-width:350px'><br>
-						<img src='css/photos/tomatoes.jpg' alt='Wilted tomatoes' style='max-width:350px'>
+						<img src='css/photos/tomatoes.JPG' alt='Wilted tomatoes' style='max-width:350px'>
 					</div>
 				</div>
 				
