--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</div>
 					<div class='td td--col'>
 						<img src='css/photos/salmonella_edit.jpg' alt='Bacteria on Chromagar' style='max-width:350px'><br>
-						<img src='css/photos/tomatoes.JPG' alt='Wilted tomatoes' style='max-width:350px'>
+						<img src='css/photos/tomatoes.jpg' alt='Wilted tomatoes' style='max-width:350px'>
 					</div>
 				</div>
 				
