--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 			<div class='contain'>
 				<h2>Research</h2>
 				
-				<div class='table'>
+				<div class='table'> 
 					<div class='td td--col'>
 						<p>I am part of the Vellidis Research Group at the University of Georgia investigating pathogenic bacteria in agricultural environments. We aim to identify agricultural practices and environmental conditions affecting the presence and survival of <i>Salmonella</i> on fresh produce. The focus of our current project is <i>Salmonella</i> in irrigation water, and the transfer of <i>Salmonella</i> from pond or well water to various fruit and vegetable crops grown under pivot, drip, or sprinkler irrigation systems. Visit <a href="http://www.vellidis.org">www.vellidis.org</a>.</p>
 						<P><b>Previous research</b><p>
 						Master's thesis: <a href='css/docs/harris_casey_ms.pdf'>Impacts of storm-driven surface runoff and landscape characteristics on<i> Salmonella </i>in farm irrigation ponds in south Georgia, USA</a>
 					</div>
 					<div class='td td--col'>
-						<img src='css/photos/salmonella_edit.jpg' alt='Bacteria on Chromagar' style='max-width:350px'><br>
-						<img src='css/photos/tomatoes.jpg' alt='Wilted tomatoes' style='max-width:350px'>
+						<img src='css/photos/salmonella_orig.jpg' alt='Bacteria on Chromagar' style='max-width:350px'><br>
+						<img src='css/photos/watermelon.jpg' alt='Wilted tomatoes' style='max-width:350px'>
 					</div>
 				</div>
 				
