--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 						Master's thesis: <a href='css/docs/harris_casey_ms.pdf'>Impacts of storm-driven surface runoff and landscape characteristics on<i> Salmonella </i>in farm irrigation ponds in south Georgia, USA</a>
 					</div>
 					<div class='td td--col'>
-						<img src='css/photos/salmonella_orig.jpg' alt='Bacteria on Chromagar' style='max-width:350px'><br>
-						<img src='css/photos/watermelon.jpg' alt='Wilted tomatoes' style='max-width:350px'>
+						<img src='css/photos/salmonella-350px.jpg' alt='Bacteria on Chromagar' width="350"><br>
+						<img src='css/photos/watermelon-350px.jpg' alt='Watermelon' width="350">
 					</div>
 				</div>
 				
-			</div>5		</section>
+			</div>
+		</section>
 		<section id='resume'>
 			<div class='contain'>
 				<h2>Resume</h2>
