Fixed some text

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 				
 				<div class='table'> 
 					<div class='td td--col'>
-						<p>I am part of the Vellidis Research Group at the University of Georgia investigating pathogenic bacteria in agricultural environments. We aim to identify agricultural practices and environmental conditions affecting the presence and survival of <i>Salmonella</i> on fresh produce. The focus of our current project is <i>Salmonella</i> in irrigation water, and the transfer of <i>Salmonella</i> from pond or well water to various fruit and vegetable crops grown under pivot, drip, or sprinkler irrigation systems. Visit <a href="http://www.vellidis.org">www.vellidis.org</a>.</p>
+						<p>I am part of the Vellidis Research Group at the University of Georgia investigating pathogenic bacteria in agricultural environments. We aim to identify agricultural practices and environmental conditions affecting the presence and survival of <i>Salmonella</i> on fresh produce. The focus of our current project is <i>Salmonella</i> in irrigation water, and the transfer of <i>Salmonella</i> from pond or well water to various fruit and vegetable crops grown under pivot, drip, or sprinkler irrigation systems. For more information, visit <a href="http://www.vellidis.org">www.vellidis.org</a>.</p>
 						<P><b>Previous research</b><p>
 						Master's thesis: <a href='css/docs/harris_casey_ms.pdf'>Impacts of storm-driven surface runoff and landscape characteristics on<i> Salmonella </i>in farm irrigation ponds in south Georgia, USA</a>
 					</div>
 					<div class='td td--col'>
-						<img src='css/photos/salmonella-350px.jpg' alt='Bacteria on Chromagar' width="350"><br>
+						<img src='css/photos/salmonella-350px.jpg' alt='Salmonella and other bacteria on Chromagar and XLT4' width="350"><br>
 						<img src='css/photos/watermelon-350px.jpg' alt='Watermelon' width="350">
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 		<section id='resume'>
 			<div class='contain'>
 				<h2>Resume</h2>
-				<a href='css/docs/resume.pdf'>download pdf</a>
+				<a href='css/docs/resume.pdf'>Download PDF</a>
 			</div>
 		</section>
 		<footer>
