--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 		<section id='about-me'>
 			<div class='contain'>
-				<p>I am an ecological researcher located in southern Georgia. My goals include improving environmental health and the sustainability of agricultural production systems. </p>
+				<p>I am an ecological researcher located in southern Georgia. My goals include improving agricultural production systems and environmental health. </p>
 				contact: <a href='mailto:csharris9@gmail.com'>csharris9@gmail.com</a>
 		</section>
 		<section id='research'>
@@ -46,7 +46,7 @@
 		<section id='resume'>
 			<div class='contain'>
 				<h2>Resume</h2>
-				<a href='css/docs/resume.pdf'>Download PDF</a>
+				<a href='css/docs/new_resume.pdf'>Download PDF</a>
 			</div>
 		</section>
 		<footer>
