Fixed some text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 		<section id='about-me'>
 			<div class='contain'>
-				<p>I am an ecological researcher located in southern Georgia. My goals include improving agricultural production systems and environmental health. </p>
+				<p>I am a biological researcher located in southern Georgia. My interests include agricultural production and environmental health. </p>
 				contact: <a href='mailto:csharris9@gmail.com'>csharris9@gmail.com</a>
 		</section>
 		<section id='research'>
@@ -31,7 +31,7 @@
 				
 				<div class='table'> 
 					<div class='td td--col'>
-						<p>I am part of the Vellidis Research Group at the University of Georgia investigating pathogenic bacteria in agricultural environments. We aim to identify agricultural practices and environmental conditions affecting the presence and survival of <i>Salmonella</i> on fresh produce. The focus of our current project is <i>Salmonella</i> in irrigation water, and the transfer of <i>Salmonella</i> from pond or well water to various fruit and vegetable crops grown under pivot, drip, or sprinkler irrigation systems. For more information, visit <a href="http://www.vellidis.org">www.vellidis.org</a>.</p>
+						<p>I am part of the Vellidis Research Group at the University of Georgia investigating pathogenic bacteria in agricultural environments. We aim to identify agricultural practices and environmental conditions affecting the presence and survival of <i>Salmonella</i> on fresh produce. The focus of our current project is <i>Salmonella</i> in irrigation water, and the transfer of <i>Salmonella</i> from pond or well water to various fruit and vegetable crops grown under pivot, drip, or sprinkler irrigation systems. For more information, visit <a href="http://vellidis.org">vellidis.org</a>.</p>
 						<P><b>Previous research</b><p>
 						Master's thesis: <a href='css/docs/harris_casey_ms.pdf'>Impacts of storm-driven surface runoff and landscape characteristics on<i> Salmonella </i>in farm irrigation ponds in south Georgia, USA</a>
 					</div>
