--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class='table table--fixed'>
 					<a href='#about-me' class='main-nav_btn td'>About</a>
 					<a href='#research' class='main-nav_btn td'>Research</a>
-					<a href='#resume' class='main-nav_btn td'>Resume</a>
+					<!--<a href='#resume' class='main-nav_btn td'>Resume</a>-->
 				</div>
 			</div>
 		</nav>
@@ -43,11 +43,11 @@
 				
 			</div>
 		</section>
-		<section id='resume'>
+		<!--<section id='resume'>
 			<div class='contain'>
 				<h2>Resume</h2>
 				<a href='css/docs/new_resume.pdf'>Download PDF</a>
-			</div>
+			</div> -->
 		</section>
 		<footer>
 		</footer>
