--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 		<section id='about-me'>
 			<div class='contain'>
-				<p>I am a biological researcher located in southern Georgia. My interests include agricultural production and environmental health. </p>
+				<p>I am a biological researcher located in southern Georgia. My interests include microbial ecology, especially as it relates to agricultural production and environmental health. </p>
 				contact: <a href='mailto:csharris9@gmail.com'>csharris9@gmail.com</a>
 		</section>
 		<section id='research'>
