--- a/index.html
+++ b/index.html
@@ -5,51 +5,65 @@
 		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,600&amp;subset=latin'>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 	</head>
+
+
 	<body>
+
 		<header>
 			<div class='contain'>
-				<h1>Casey Harris</h1>
+				<h1> <b>Casey S. Harris</b> </h1>
 			</div>
+
+		<!-- <nav class='main-nav'> -->
+			<!-- <div class='contain'> -->
+					<!-- <a href='#research' class='main-nav_btn td'>Research</a> -->
+					<!-- <a href='#publications' class='main-nav_btn td'>More information</a> -->
+			<!-- </div> -->
+		<!-- </nav> -->
 		</header>
-		<nav class='main-nav'>
+		
+		<section>
 			<div class='contain'>
-				<div class='table table--fixed'>
-					<a href='#about-me' class='main-nav_btn td'>About</a>
-					<a href='#research' class='main-nav_btn td'>Research</a>
-					<!--<a href='#resume' class='main-nav_btn td'>Resume</a>-->
+						<p>I am a recently-graduated ecological researcher located in south Georgia. Most of my background and experience are related to plants and water resources, from riparian vegetation to crop irrigation.</p>
+						<p>I would be happy to hear from you.<br>
+						<a href='mailto:csharris9@gmail.com'>csharris9@gmail.com</a></p>
+					</div>
 				</div>
 			</div>
-		</nav>
-		<section id='about-me'>
-			<div class='contain'>
-				<p>I am an ecological researcher located in southern Georgia. My interests include water quality and microbial ecology, especially as it relates to agricultural production and environmental health. </p>
-				contact: <a href='mailto:csharris9@gmail.com'>csharris9@gmail.com</a>
 		</section>
+		
+
 		<section id='research'>
 			<div class='contain'>
-				<h2>Research</h2>
-				
-				<div class='table'> 
+				<h2>Current Research</h2>
+				<div class='inline-table'> 
 					<div class='td td--col'>
 						<p>I am part of the Vellidis Research Group at the University of Georgia investigating pathogenic bacteria in agricultural environments. We aim to identify agricultural practices and environmental conditions affecting the presence and survival of human pathogens on fresh produce. The focus of our current project is <i>Salmonella</i> in irrigation water, and the transfer of <i>Salmonella</i> from pond or well water to various fruit and vegetable crops grown under pivot, drip, or sprinkler irrigation systems. For more information, visit <a href="http://vellidis.org">vellidis.org</a>.</p>
-						<P><b>Previous research</b><p>
-						Master's thesis: <a href='css/docs/harris_casey_ms.pdf'>Impacts of storm-driven surface runoff and landscape characteristics on<i> Salmonella </i>in farm irrigation ponds in south Georgia, USA</a>
 					</div>
-					<div class='td td--col'>
-						<img src='css/photos/salmonella-350px.jpg' alt='Salmonella and other bacteria on Chromagar and XLT4' width="350"><br>
-						<img src='css/photos/watermelon-350px.jpg' alt='Watermelon' width="350">
-					</div>
+				<div class='td td--col'>
+					<img src='css/photos/irrig_drip.jpg' alt='Sampling drip irrigation' width="350">
 				</div>
-				
+				</div>
 			</div>
 		</section>
-		<!--<section id='resume'>
+
+		<section id='publications'>
 			<div class='contain'>
-				<h2>Resume</h2>
-				<a href='css/docs/new_resume.pdf'>Download PDF</a>
-			</div> -->
+				<div class='inline-table'> 
+					<div class='td td--col2'>
+						<h4>Southeast Regional Fruit and Vegetable Conference Posters<br>(Savannah, GA, January 2015)</h4>
+							<p><a href='css/docs/storms.pdf'>Storm runoff in fresh produce farm landscapes:
+								<i>Salmonella</i> and <i>E. coli</i> in farm irrigation ponds</a></p>
+							<p><a href='css/docs/irrig.pdf'><i>Salmonella</i> transport through irrigation systems
+								and occurrence on crops at harvest</a></p> 
+					</div>
+					<div class='td td--col2'>
+						<h4>Master's thesis<br>(University of Georgia, May 2014)</h4> 
+							<p><a href='css/docs/harris_casey_ms.pdf'>Impacts of storm-driven surface runoff and landscape 	characteristics on<i> Salmonella </i>in farm irrigation ponds in south Georgia, USA</a></p>	
+					</div>
+				</div>
+			</div>
 		</section>
-		<footer>
-		</footer>
+
 	</body>
 </html>
